# btcrs

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: lib.rs
