[build-system]
requires = ["maturin>=0.14,<0.15", "poetry-core"]
build-backend = "maturin"

[project]
name = "btcrs"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry]
name = "btcrs"
version = "0.0.1"
description = ""
authors = ["Sam Barnes <sam.barnes@opensea.io>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^0.14.13"
